[gd_scene load_steps=30 format=3 uid="uid://bjatbqanvv2qn"]

[ext_resource type="Texture2D" uid="uid://4vhfv3jj6pj3" path="res://allies/sprites/survivor_fighter_down_x60.png" id="1_dblhu"]
[ext_resource type="Script" path="res://allies/survivor_fighter.gd" id="1_f7oxc"]
[ext_resource type="Texture2D" uid="uid://24okhefs2b6h" path="res://allies/sprites/survivor_fighter_left_x60.png" id="2_224b1"]
[ext_resource type="Texture2D" uid="uid://dt441aq5sdvtr" path="res://allies/sprites/survivor_fighter_right_x60.png" id="3_7aulb"]
[ext_resource type="Texture2D" uid="uid://blejc8hr0m01e" path="res://allies/sprites/survivor_fighter_up_x60.png" id="4_vyyvu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7l0cc"]
atlas = ExtResource("1_dblhu")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r8as"]
atlas = ExtResource("2_224b1")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_3am17"]
atlas = ExtResource("3_7aulb")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmtc6"]
atlas = ExtResource("4_vyyvu")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_4aled"]
atlas = ExtResource("1_dblhu")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_ni5uf"]
atlas = ExtResource("1_dblhu")
region = Rect2(60, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7r31"]
atlas = ExtResource("1_dblhu")
region = Rect2(120, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vnao"]
atlas = ExtResource("1_dblhu")
region = Rect2(180, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfwev"]
atlas = ExtResource("2_224b1")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgg80"]
atlas = ExtResource("2_224b1")
region = Rect2(60, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_62gx8"]
atlas = ExtResource("2_224b1")
region = Rect2(120, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwsog"]
atlas = ExtResource("2_224b1")
region = Rect2(180, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjxwy"]
atlas = ExtResource("3_7aulb")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_7p78d"]
atlas = ExtResource("3_7aulb")
region = Rect2(60, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv7my"]
atlas = ExtResource("3_7aulb")
region = Rect2(120, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqtcp"]
atlas = ExtResource("3_7aulb")
region = Rect2(180, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6qe5"]
atlas = ExtResource("4_vyyvu")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_ay4c2"]
atlas = ExtResource("4_vyyvu")
region = Rect2(60, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_mebco"]
atlas = ExtResource("4_vyyvu")
region = Rect2(120, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lpej"]
atlas = ExtResource("4_vyyvu")
region = Rect2(180, 0, 60, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_vut0o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7l0cc")
}],
"loop": true,
"name": &"idle_fighter_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r8as")
}],
"loop": true,
"name": &"idle_fighter_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3am17")
}],
"loop": true,
"name": &"idle_fighter_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmtc6")
}],
"loop": true,
"name": &"idle_fighter_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4aled")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ni5uf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7r31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vnao")
}],
"loop": true,
"name": &"walk_fighter_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfwev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgg80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62gx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwsog")
}],
"loop": true,
"name": &"walk_fighter_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjxwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7p78d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv7my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqtcp")
}],
"loop": true,
"name": &"walk_fighter_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6qe5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ay4c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mebco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lpej")
}],
"loop": true,
"name": &"walk_fighter_up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_e1s8m"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gl307"]
radius = 241.085

[sub_resource type="CircleShape2D" id="CircleShape2D_svpur"]
radius = 352.456

[node name="ally_fighter" type="CharacterBody2D" groups=["survivor"]]
script = ExtResource("1_f7oxc")

[node name="ally_fighter_anim_2d" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0.368627, 0.478431, 1)
scale = Vector2(1, 1.01165)
sprite_frames = SubResource("SpriteFrames_vut0o")
animation = &"idle_fighter_down"
offset = Vector2(0, -24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_e1s8m")

[node name="survivor_fighter_detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="survivor_fighter_detection_area"]
shape = SubResource("CircleShape2D_gl307")

[node name="attack_area" type="Area2D" parent="."]

[node name="enemy_attack_area_coll" type="CollisionShape2D" parent="attack_area"]
shape = SubResource("CircleShape2D_svpur")

[node name="walking_timer" type="Timer" parent="."]
autostart = true

[node name="continue_following" type="Timer" parent="."]

[connection signal="body_entered" from="survivor_fighter_detection_area" to="." method="_on_survivor_fighter_detection_area_body_entered"]
[connection signal="body_exited" from="survivor_fighter_detection_area" to="." method="_on_survivor_fighter_detection_area_body_exited"]
[connection signal="timeout" from="walking_timer" to="." method="_on_walking_timer_timeout"]
[connection signal="timeout" from="continue_following" to="." method="_on_continue_following_timeout"]
